--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,11 @@
         <artifactId>slf4j-log4j12</artifactId>
         <version>1.7.5</version>
     </dependency>
+
     <dependency>
         <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.7.0</version>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.8.1</version>
         <scope>test</scope>
     </dependency>
     <dependency>
