--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
         <artifactId>selenium-java</artifactId>
         <version>4.1.3</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/ru.yandex.qatools.ashot/ashot -->
+    <dependency>
+        <groupId>ru.yandex.qatools.ashot</groupId>
+        <artifactId>ashot</artifactId>
+        <version>1.5.3</version>
+    </dependency>
 
 </dependencies>
 </project>
