--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
                       <version>${junit-platform-surefire-provider.version}</version>
                   </dependency>
                   <dependency>
+                      <groupId>org.junit.jupiter</groupId>
+                      <artifactId>junit-jupiter-engine</artifactId>
+                      <version>5.7.0</version>
+                  </dependency>
+                  <dependency>
                       <groupId>org.aspectj</groupId>
                       <artifactId>aspectjweaver</artifactId>
                       <version>${aspectj.version}</version>
