--- a/pom.xml
+++ b/pom.xml
@@ -90,10 +90,10 @@
                           <name>junit.jupiter.extensions.autodetection.enabled</name>
                           <value>true</value>
                       </property>
-                      <property>
+                    <!-- <property>
                           <name>allure.results.directory</name>
                           <value>${project.build.directory}/allure-results</value>
-                      </property>
+                      </property>-->
                   </systemProperties>
               </configuration>
               <dependencies>
